2004-06-25 Chris Wiebe
	Fix for PR# 49849: [New Class Wizard] Able to add a new C++ Class with the same name (at same location) from  New C++ Class Wizard
	
2004-06-24 Bogdan Gheorghe
	Fix for 66695: [Indexer] Manually add an include path to a file/folder is ignored
	Changed CompletionEngine getScannerInfo to get the info from a resource instead of 
	a project in order to get a complete list of include paths
	
	* src/org/eclipse/cdt/internal/ui/search/actions/SelectionParseAction.java
	* src/org/eclipse/cdt/internal/ui/text/contentassist/CompletionEngine.java
	
	
2004-06-24 Tanya Wolff
	Fix for PR 60299: Accessibility: Lost children in Binary Parser properties dialog
	Switched the binary parsers Options group with its child composite so the
	group is read before the controls in the group.
	Externalized a few dialog titles.
	* src/org/eclipse/cdt/ui/dialogs/BinaryParserBock.java
	* src/org/eclipse/cdt/ui/dialogs/CygwinBinaryParserPage.java
	* src/org/eclipse/cdt/ui/dialogs/GNUElfBinaryParserPage.java
	* src/org/eclipse/cdt/ui/dialogs/BinaryParserBock.java
	
2004-06-24 Hoda Amer
	A small fix to the New Class Wizard "link to file" option.
	Fix for PR# 47570 : [New Class Wizard] Use of internal Eclipse classes in CDT(LinkToFileGroup)
	
2004-06-24 Chris Wiebe
	Fix for PR 48783 : [New Class Wizard] Err Create C++ Class with "Link to  File" checkbox selected
	Fix for PR 47571 : [New Class Wizard] resolved location can be blanked
	Fix for PR 48774 : [New Class Wizard] Error if Create C++ Class with no name
	
2004-06-23 Tanya Wolff
	Fix for bugs 66134,66145
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathEntryMessages.properties
	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPathIncludeSymbolEntryPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/NewWizardMessages.properties
	* src/org/eclipse/cdt/internal/ui/wizards/dialogfields/LinkToFileGroup.java
	
2004-06-23 Tanya Wolff
	Fix for Bug 66300 - i18n: File Types preferences buttons don't expand